Fixed game being too large on 1080p screen

--- a/src/components/board.css
+++ b/src/components/board.css
@@ -3,7 +3,7 @@ body {
 }
 .table {
 	margin: 0 auto;
-	max-width: 1200px;
+	max-width: 900px;
 }
 .victory {
 	color: white;
